--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-/.github
-/.firebase
-/.firebaserc
-/.gitignore
+
+.github/
+.firebase/
+.firebaserc
+.gitignore
